@@ -88,3 +88,12 @@ nvidia-install:
 
     If no custom repository was specified before, this action will set the
     Nvidia repository as the default and install the latest drivers from it.
+
+singularity-install:
+  description: >
+    Install Singularity. This might take a few minutes to complete.
+
+    This action will install singularity using the official .deb (Ubuntu) 
+    or .rpm (CentOS) packages retrieved from GitHub Releases.
+
+    Note: The .deb or .rpm files must be suppliead as Juju resources.
